Happy New Year
-Implement Parking Grouped Analytics
-Implement query API based on grouped datetimes
-Renew the API specification
